# phal

./: .build.yml  .gitmodules  Cargo.toml  README.md  odroid-xu4-gpio.md  shell.nix
assets/: index.html
example/: master-config.json  self_test.py  slave-config.json
self-test/: pin-config.json  self_test.py  serial-config.json
src/: http_status_code.rs  lib.rs  limb.rs  main.rs  pin.rs  port_settings_from_json.rs  response_data.rs  serial.rs  server.rs  xmodem.rs
src/xmodem/: mod.rs  packet.rs  xmodem_file_adapter.rs
tests/: phal_tests.rs
