[package]
name = "phal"
description = "Pokes Hardware And Listens"
version = "0.2.0"
authors = ["Callum David O'Brien <cdo@teknik.io>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
xu4-hal = "0.1.2"
embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
rocket = { version = "0.4.2", default-features = false }
serde_json = "1.0.48"
