[package]
name = "phal"
description = "Pokes Hardware And Listens"
version = "0.4.0"
authors = ["Callum David O'Brien <cdo@teknik.io>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
lazy_static = "1"
regex = "1"
serde_json = "1.0.48"
serial = "0.4.0"
tiny_http = "0.7.0"
xu4-hal = "0.2.2"

[dev-dependencies]
ureq = "1.1.1"
