[package]
name = "phal"
description = "Pokes Hardware And Listens"
version = "0.5.1"
authors = ["Callum David O'Brien <cdo@teknik.io>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
gpio-cdev = "0.2.0"
serde_json = "1.0.48"
serial = "0.4.0"
tiny_http = "0.7.0"

[dev-dependencies]
ureq = "1.1.1"
